cluster/apps/media/organizr/no-auth-middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: organizr-web-no-auth
spec:
  headers:
    customRequestHeaders:
      X-No-Auth-Username: "admin"
